ISPN-4606 Startup scripts out of date
Sync script updates with WildFly 8.1.0.Final.

Verified no refs to "standalone.*" in clustered.*:

  grep 'standalone\.' clustered.*

Vefiried all diffs are reasonable between standalone and clustered:

  diff -u standalone.sh clustered.sh
  diff -u standalone.conf clustered.conf
  diff -u standalone.bat clustered.bat
  diff -u standalone.conf.bat clustered.conf.bat

Verified add-user, jconsole and jdr worked after build.